Updates to compton.conf, i3blocks.conf, etc.

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-A collection of dot files from my laptop.
+# Dot-files from my laptop
+
+WM:     i3-gaps
+Bar:    i3bar with i3blocks
+Shell:  zsh 
+Term:   urxvt
+Font:   dina
+
